# bit

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: State_app.dart  State_globals.dart  State_persistent_datastore.dart  State_terminal.dart  home.dart  main.dart  quickstart.dart  settings.dart  sidepanel.dart  state.dart  state_app.dart  state_globals.dart  state_persistent_datastore.dart  state_terminal.dart  terminal.dart  terminal_IO_tab.dart  terminal_io_tab.dart  terminal_settings_tab.dart  terminal_wrapper.dart  warning_dialogue.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: controller.dart  serial.dart  simple.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: controller.rs  mod.rs  serial.rs  simple.rs
rust/tests/: backend_integration_test.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_bit.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_bit.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
